Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-6506

InnoDB: Assertion failure in thread 2810182464 in file buf0flu.cc line 549

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.0.12
    • 10.0.13
    • None

    Description

      Test: innodb_simulate_comp_failures-xtradb

      http://buildbot.askmonty.org/buildbot/builders/kvm-fulltest2/builds/2429

      InnoDB: Assertion failure in thread 2810182464 in file buf0flu.cc line 549
      InnoDB: Failing assertion: buf_page_in_file(bpage)
       
      buf/buf0flu.cc:549(buf_flush_ready_for_flush(buf_page_t*, buf_flush_t))[0x8856dd2]
      buf/buf0flu.cc:1368(buf_flush_page_and_try_neighbors)[0x8858e00]
      buf/buf0flu.cc:1721(buf_do_flush_list_batch)[0x885a55f]
      buf/buf0flu.cc:2053(buf_flush_list(unsigned long, unsigned long long, unsigned long*))[0x885bb14]
      buf/buf0flu.cc:2354(page_cleaner_do_flush_batch)[0x885d765]
      /lib/i386-linux-gnu/libpthread.so.0(+0x6d4c)[0xb76d9d4c]
      /lib/i386-linux-gnu/libc.so.6(clone+0x5e)[0xb74e8ace]

      Attachments

        Issue Links

          Activity

            People

              jplindst Jan Lindström (Inactive)
              jplindst Jan Lindström (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.25d
                  0.25d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.