storage/xtradb/buf/buf0flu.cc
@@ -546,7 +546,7 @@ buf_flush_ready_for_flush(
 	ut_ad(flush_type < BUF_FLUSH_N_TYPES);
 	ut_ad(mutex_own(buf_page_get_mutex(bpage))
 	      || flush_type == BUF_FLUSH_LIST);
-	ut_a(buf_page_in_file(bpage));
+	ut_a(buf_page_in_file(bpage) || buf_page_get_state(bpage) == BUF_BLOCK_REMOVE_HASH);
 
 	if (bpage->oldest_modification == 0
 	    || buf_page_get_io_fix_unlocked(bpage) != BUF_IO_NONE) {
